; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_batchscan.c_btm_ble_read_batchscan_reports.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_batchscan.c_btm_ble_read_batchscan_reports.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@BTM_NO_RESOURCES = common dso_local global i64 0, align 8
@BTM_BLE_BATCH_SCAN_READ_RESULTS_LEN = common dso_local global i32 0, align 4
@BTM_BLE_BATCH_SCAN_READ_RESULTS = common dso_local global i32 0, align 4
@HCI_BLE_BATCH_SCAN_OCF = common dso_local global i32 0, align 4
@btm_ble_batchscan_vsc_cmpl_cback = common dso_local global i32 0, align 4
@BTM_CMD_STARTED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"btm_ble_read_batchscan_reports %d\00", align 1
@BTM_ILLEGAL_VALUE = common dso_local global i64 0, align 8
@ble_batchscan_cb = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@BTM_BLE_BATCH_SCAN_READ_REPTS_EVT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @btm_ble_read_batchscan_reports(i32 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %11 = load i64, i64* @BTM_NO_RESOURCES, align 8
  store i64 %11, i64* %6, align 8
  %12 = load i32, i32* @BTM_BLE_BATCH_SCAN_READ_RESULTS_LEN, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %7, align 8
  %15 = alloca i32, i64 %13, align 16
  store i64 %13, i64* %8, align 8
  store i32* %15, i32** %9, align 8
  %16 = load i32, i32* @BTM_BLE_BATCH_SCAN_READ_RESULTS_LEN, align 4
  %17 = call i32 @memset(i32* %15, i32 0, i32 %16)
  %18 = load i32*, i32** %9, align 8
  %19 = load i32, i32* @BTM_BLE_BATCH_SCAN_READ_RESULTS, align 4
  %20 = call i32 @UINT8_TO_STREAM(i32* %18, i32 %19)
  %21 = load i32*, i32** %9, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @UINT8_TO_STREAM(i32* %21, i32 %22)
  %24 = load i32, i32* @HCI_BLE_BATCH_SCAN_OCF, align 4
  %25 = load i32, i32* @BTM_BLE_BATCH_SCAN_READ_RESULTS_LEN, align 4
  %26 = load i32, i32* @btm_ble_batchscan_vsc_cmpl_cback, align 4
  %27 = call i64 @BTM_VendorSpecificCommand(i32 %24, i32 %25, i32* %15, i32 %26)
  store i64 %27, i64* %6, align 8
  %28 = load i64, i64* @BTM_CMD_STARTED, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %2
  %31 = load i64, i64* %6, align 8
  %32 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i64 %31)
  %33 = load i64, i64* @BTM_ILLEGAL_VALUE, align 8
  store i64 %33, i64* %3, align 8
  store i32 1, i32* %10, align 4
  br label %46

34:                                               ; preds = %2
  %35 = load i64, i64* @BTM_CMD_STARTED, align 8
  %36 = load i64, i64* %6, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %44

38:                                               ; preds = %34
  %39 = load i32, i32* @BTM_BLE_BATCH_SCAN_READ_RESULTS, align 4
  %40 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ble_batchscan_cb, i32 0, i32 0), align 4
  %41 = load i32, i32* @BTM_BLE_BATCH_SCAN_READ_REPTS_EVT, align 4
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @btm_ble_batchscan_enq_op_q(i32 %39, i32 %40, i32 %41, i32 %42)
  br label %44

44:                                               ; preds = %38, %34
  %45 = load i64, i64* %6, align 8
  store i64 %45, i64* %3, align 8
  store i32 1, i32* %10, align 4
  br label %46

46:                                               ; preds = %44, %30
  %47 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %47)
  %48 = load i64, i64* %3, align 8
  ret i64 %48
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @UINT8_TO_STREAM(i32*, i32) #2

declare dso_local i64 @BTM_VendorSpecificCommand(i32, i32, i32*, i32) #2

declare dso_local i32 @BTM_TRACE_ERROR(i8*, i64) #2

declare dso_local i32 @btm_ble_batchscan_enq_op_q(i32, i32, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
